--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-/vendor
-/node_modules
+vendor/
+node_modules/
 /public/storage
 Homestead.yaml
 Homestead.json
+
+# Laravel 4 specific
+bootstrap/compiled.php
+
+# Laravel 5 & Lumen specific
+bootstrap/cache/
+.env.*.php
+.env.php
 .env
+# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
+.rocketeer/
